Fixed uncentered scaling.  The issue was caused by adding a Height and Width to the PolarMultiplicationCanvas. Their removale fixes many of the layout issues.

--- a/PolarMultiplicationPage.xaml
+++ b/PolarMultiplicationPage.xaml
@@ -6,6 +6,6 @@
       xmlns:l="clr-namespace:ThePriceIsAName"
       Title="Multiplication along the circle">
     <Grid>
-        <l:PolarMultiplicationCanvas Height="400" Width="400" Radius="150" Resolution="300" />
+        <l:PolarMultiplicationCanvas Radius="150" Resolution="300" />
     </Grid>
 </Page>
