Added the graphics to show a history of actors(colors) and where in the total they have contributed, might want to change the opacity for earier entries.

--- a/HealthBarPage.xaml
+++ b/HealthBarPage.xaml
@@ -6,8 +6,9 @@
       xmlns:l="clr-namespace:ThePriceIsAName"
       Title="HealthBarPage">
 
-    <Grid>
+    <StackPanel>
         <l:HealthBar x:Name="Hero" Radius="150" Normal="100"/>
-        <Button Click="Button_Click">Subtract</Button> 
-    </Grid>
+        <Button Click="Add_Click">Add</Button>
+        <Button Click="Subtract_Click">Subtract</Button>
+    </StackPanel>
 </Page>
