My implementation of a couple merge sorts cribbed from Wikipedia.  The additional overhead is to animate the sorting process in WPF. Also, there is a subtle bug either in the animation, my implementation of the wiki algorithm or the algorithm.  Next update will be an assertion of the sort order and an animation of the assertion.

--- a/RotatableAndScalablePage.xaml
+++ b/RotatableAndScalablePage.xaml
@@ -12,6 +12,7 @@
             <TextBlock><Hyperlink NavigateUri="PolarMultiplicationPage.xaml" TargetName="TranslationFrame">Polar Multiplication</Hyperlink></TextBlock>
             <TextBlock><Hyperlink NavigateUri="ReticlePage.xaml" TargetName="TranslationFrame">Reticle</Hyperlink></TextBlock>
             <TextBlock><Hyperlink NavigateUri="HealthBarPage.xaml" TargetName="TranslationFrame">Health Bar</Hyperlink></TextBlock>
+            <TextBlock><Hyperlink NavigateUri="SortingPage.xaml" TargetName="TranslationFrame">Sorting Page</Hyperlink></TextBlock>
         </StackPanel>
         <Slider Name="ScalarSlider" Value="1" Visibility="Collapsed"/>
         <Slider Name="RotationSlider" Value="0" Visibility="Collapsed"/>
