--- a/SortingPage.xaml
+++ b/SortingPage.xaml
@@ -7,6 +7,7 @@
       Title="SortingPage">
 
     <Grid Margin="10">
-        <l:SortingCanvas Width="900" Height="500"/>
+        <l:BottomUpMergeCanvas Width="900" Height="500"/>
+        <l:TopDownMergeCanvas Width="900" Height="500"/>
     </Grid>
 </Page>
