Added the bottom up merge and top down merge sorting animations.  Also including empty pages with regards to future baduk work.

--- a/RotatableAndScalablePage.xaml
+++ b/RotatableAndScalablePage.xaml
@@ -9,14 +9,15 @@
         ShowsNavigationUI="False">
     <Grid>
         <StackPanel>
-            <TextBlock><Hyperlink NavigateUri="PolarMultiplicationPage.xaml" TargetName="TranslationFrame">Polar Multiplication</Hyperlink></TextBlock>
-            <TextBlock><Hyperlink NavigateUri="ReticlePage.xaml" TargetName="TranslationFrame">Reticle</Hyperlink></TextBlock>
-            <TextBlock><Hyperlink NavigateUri="HealthBarPage.xaml" TargetName="TranslationFrame">Health Bar</Hyperlink></TextBlock>
-            <TextBlock><Hyperlink NavigateUri="SortingPage.xaml" TargetName="TranslationFrame">Sorting Page</Hyperlink></TextBlock>
+            <TextBlock><Hyperlink NavigateUri="PolarMultiplicationPage.xaml" TargetName="World">Polar Multiplication</Hyperlink></TextBlock>
+            <TextBlock><Hyperlink NavigateUri="ReticlePage.xaml" TargetName="World">Reticle</Hyperlink></TextBlock>
+            <TextBlock><Hyperlink NavigateUri="HealthBarPage.xaml" TargetName="World">Health Bar</Hyperlink></TextBlock>
+            <TextBlock><Hyperlink NavigateUri="SortingPage.xaml" TargetName="World">Sorting Page</Hyperlink></TextBlock>
+            <TextBlock><Hyperlink NavigateUri="BadukPage.xaml" TargetName="World">Baduk Page</Hyperlink></TextBlock>
         </StackPanel>
         <Slider Name="ScalarSlider" Value="1" Visibility="Collapsed"/>
         <Slider Name="RotationSlider" Value="0" Visibility="Collapsed"/>
-        <Frame Name="World" Source="TranslatablePage.xaml" VerticalAlignment="Center" HorizontalAlignment="Center">
+        <Frame Name="World" Source="PolarMultiplicationPage.xaml" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Frame.LayoutTransform>
                 <TransformGroup>
                     <RotateTransform 
