--- a/SortingPage.xaml
+++ b/SortingPage.xaml
@@ -7,7 +7,11 @@
       Title="SortingPage">
 
     <Grid Margin="10">
-        <l:BottomUpMergeCanvas Width="900" Height="500"/>
-        <l:TopDownMergeCanvas Width="900" Height="500"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="250"/>
+            <RowDefinition Height="250"/>
+        </Grid.RowDefinitions>
+        <l:BottomUpMergeCanvas Grid.Row="0" Width="900" />
+        <l:TopDownMergeCanvas Grid.Row="1" Width="900" />
     </Grid>
 </Page>
